tests/errors/prints-show.ja
procedure main()
  int x
  int y
  int z
  x += 8
  y += 13
  z += 21

  show(x, y)
